// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 btrirE"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 jgdUnQ"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 fDSpXr"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 gOUUHv"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 fncmwX"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 btrirE"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 haEDvy"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 kYWApR"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button-mdtvtf-0 gIhjQC"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
